# task-tracker

./: README.md  docker-compose.yml
api/: Dockerfile  pyproject.toml
api/src/: main.py
api/src/api/: dep.py  session.py
api/src/api/core/: config.py  security.py
api/src/api/models/: category.py  task.py  user.py
api/src/api/routes/: admin.py  auth.py  categories.py  tasks.py
api/src/api/schemas/: auth.py  category.py  task.py  user.py
ui/: index.html  package-lock.json  package.json
ui/src/: App.tsx  index.css  main.tsx  type.ts
ui/src/api/: client.ts
ui/src/components/: AdminDashboard.tsx  CategoryManager.tsx  LoginForm.tsx  NavigationBar.tsx  ProtectedRoute.tsx  RegisterForm.tsx  TaskForm.tsx  TaskList.tsx
ui/src/context/: AuthContext.tsx
ui/src/pages/: AdminDashboardPage.tsx  CategoryManagementPage.tsx  LoginPage.tsx  TasksPage.tsx
